# gadget_play

./: .ackrc  .gitignore  README.md
bugs/arduino-esp32.10137/: .mise.toml  arduino-esp32.10137.ino  build_opt.h
color/: dev_setup.py  scan_color.py  test_color.py
color/color_carrier/: color_carrier.kicad_pro  color_carrier.kicad_sch  fp-lib-table  sym-lib-table
crossbar/: crossbar.kibot.yaml  crossbar.kicad_pcb  crossbar.kicad_pro  crossbar.kicad_sch
crossbar_terminals/: crossbar_terminals.kicad_pcb  crossbar_terminals.kicad_pro  crossbar_terminals.kicad_sch
docs/: index.md  package.json  package_egnor_index.json
docs/egnor_esp32/: boards.txt  platform.txt
docs/esp32_boards/: boards.txt
dw3000/: .envrc  arduino.py  dev_setup.py  platformio.ini
dw3000/src/: test_init_main.cpp
flexmatrix/: ardi.json  flexmatrix.ino
hello/: .mise.toml  hello.ino  sketch.yaml
nametag/: Pipfile  test.hex
nametag/apk/: config.en.apk  config.xxhdpi.apk  data1248.json
nametag/captures/: aaaaaaaa.packets  animation.btsnoop  bbbbbbbb.packets  colons.packets  colons_dots_as_bs.btsnoop  colons_with_dot.packets  dot_comma1.packets  dot_comma2.packets  dot_comma3.packets  dot_comma4.hex  dot_comma45.packets  dot_comma5.hex  dot_comma6.hex  dot_comma7.hex  dot_comma8.packets  dots.packets  hello.glyphs  hello.hex  hello_world.packets  world.packets  world_hello.packets
nametag/nametag/: bluetooth.py  logging.py  protocol.py
nametag/tools/: apk_json_frames.py  btle_scan.py  btsnoop_adb_fetch.py  btsnoop_tshark_extract.py  btsnoop_tshark_summary.py  (+5 more)
ok_logging_test/: ok_logging_test.ino  sketch.yaml
picam/: .envrc  .gitignore  Pipfile  checks.h  color_test.cpp  dev_setup.py  meson.build  picam_test.cpp  save_png.cpp  save_png.h
picam-cpp/: dev_setup.py  meson.build  picam_test.cpp
picam_cpp/: Pipfile  conanfile.py  dev_setup.py  picam_test.cpp
picam_py/: dev_setup.py
pintest/: .mise.toml  pintest.ino  sketch.yaml
pixelfont/: .mise.toml  font_proof.py  pyproject.toml
rp2040/: platformio.ini  pyproject.toml
rp2040/src/: blinky_main.cpp  pg_cradle.cpp  pg_cradle.h  pintest_main.cpp  terminal_main.cpp
rp2040_trivial/: platformio.ini
thingmagic/: .envrc  scan.py
tinyblink/: platformio.ini
uwb/: Pipfile  arduino.py  dev_setup.py
visorlight/: fp-lib-table  make_plots.kibot.yaml  sym-lib-table  visorlight.kicad_pcb  visorlight.kicad_pro  visorlight.kicad_sch  visorlight_parts.kicad_sym
(+36 files in other folders)
