# Python project metadata, including dependencies & tool settings
# https://snarky.ca/what-the-heck-is-pyproject-toml

[project]
name = "pixelfont"
version = "0.1"

# Dependencies needed at runtime
dependencies = [
  "imageio~=2.34.1",
  "requests~=2.31.0",
]

# How to build this project as a Python package
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
