# Python project metadata, including dependencies & tool settings
# https://snarky.ca/what-the-heck-is-pyproject-toml

[project]
name = "rp2040"
version = "0.1"

# Dependencies needed at runtime
dependencies = [
  "platformio",
]

# How to build this project as a Python package
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
